<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/menuitem_home" />

        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/menuitem_saved" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_action_categories"

            android:title="@string/menuitem_categories" />

    </group>

    <item
        android:id="@+id/menugroup_more_home"
        android:title="@string/menugroup_more_text"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_donate"
                    android:title="@string/menuitem_donate" />

                <item
                    android:id="@+id/nav_about"
                    android:title="@string/menuitem_about" />

                <item
                    android:id="@+id/nav_feed_back"
                    android:title="@string/menuitem_feedback" />

                <item
                    android:id="@+id/nav_log_out"
                    android:title="@string/menuitem_log_out" />
            </group>
        </menu>
    </item>
</menu>
