<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_edit_profile">

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.project.android_kidstories.FragmentEditProfile"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.project.android_kidstories.Fragments.CategoriesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_donate"
        android:name="com.project.android_kidstories.FragmentDonate"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_donate" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.project.android_kidstories.FragmentAbout"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_about" />

</navigation>