<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".EditProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="39dp">


        <ImageButton
            android:id="@+id/btn_status"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:adjustViewBounds="false"
            android:background="@color/colorWhite"
            android:contentDescription="@string/back_button"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_arrow_back_black_48dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="178dp"
            android:layout_height="178dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/btn_upload_image"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/upload_image_button"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/upload_image"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_image_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/image_status"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/save_button"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>