<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginStart="14dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="14dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/add_story_label"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/choose_category"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:entries="@array/items_class"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/story_content_field"
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:layout_marginTop="25dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start|top"
        android:hint="@string/write_your_story_here"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:paddingStart="11dp"
        android:paddingTop="3dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/save_content"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_triangle_blue"
        android:fontFamily="@font/roboto_regular"
        android:onClick="saveContent"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>