<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".AddStoryActivity">

    <TextView
        android:id="@+id/add_story_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/add_story"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="Title"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_light"
            android:inputType="textCapWords"
            android:textAllCaps="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:background="@drawable/upload_image_button"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/upload_image_new"
            android:textAllCaps="false"
            android:textColor="#484949"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/no_image_uploaded"
            android:textSize="12sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_type_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:onClick="TypeContent"
        android:text="@string/type_content"
        android:textColor="#F2FFFFFF"
        android:textSize="16sp" />


</LinearLayout>